add DeepPATH requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,22 @@ dash-renderer==0.11.1
 dash-html-components==0.8.0
 dash-core-components==0.15.2
 flask
+
+backports.weakref==1.0rc1
+bleach==1.5.0
+cycler==0.10.0
+html5lib==0.9999999
+Markdown==2.6.8
+matplotlib==2.0.2
+numpy==1.13.1
+olefile==0.44
+openslide-python==1.1.1
+Pillow==4.2.1
+protobuf==3.3.0
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
+scipy==0.19.1
+six==1.10.0
+tensorflow==1.2.1
+Werkzeug==0.12.2
